# checkemotion

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
